Working host CSS injection, fix z-index of panels wrt host

--- a/client/scss/_variables.scss
+++ b/client/scss/_variables.scss
@@ -19,6 +19,7 @@ $font-color:                  $black;
 $font-bold:                   600;
 $font-size-xs:                0.7rem;
 $font-size-sm:                0.8rem;
+$font-size:                   1rem;
 
 $link-color:                  $font-color;
 $link-decoration:             none;
