--- a/client/scss/debug.scss
+++ b/client/scss/debug.scss
@@ -1,4 +1,11 @@
 
+@use "sass:color";
+
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,400;0,600;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,600;1,400&display=swap');
+
+@import "variables";
+
 $debug-color:                   #454545;
 
 $debug-mark-color:              #8967f4; // #a267f4;
@@ -28,7 +35,15 @@ $control-fade:                  -0.3;
 }
 
 .reflet-overlay {
-    transform-style: preserve-3d;
+    all: initial;               // Ignore all host client styles
+    display: block;
+    margin: 0;
+    line-height: 1.5;
+    color: $font-color;
+    font-family: $font-family-sans-serif;
+    font-size: $font-size;
+    -webkit-text-size-adjust: 100%;
+    -webkit-tap-highlight-color: rgba(82, 82, 82, 0);
 }
 
 .reflet-tap {
@@ -141,7 +156,7 @@ $control-fade:                  -0.3;
 
     $shadow-offset: 4px + $debug-border-thickness;
 
-    &-shadow:nth-child(3) {
+    &-shadow {
         position: absolute;
         width: 100%;
         height: 100%;
@@ -351,3 +366,4 @@ $control-fade:                  -0.3;
     color: $syntax-string;
     font-family: $font-family-monospace;
 }
+
